Added column values for Integer and Double